--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,52 @@
+# -------------------------------------------------------------------
+# Session options
+# -------------------------------------------------------------------
+# start window numbers at 1 to match keyboard order with tmux window order
+set -g base-index 1
+set-window-option -g pane-base-index 1
+
+# renumber windows sequentially after closing any of them
+set -g renumber-windows on
+
+# increase scrollback lines
+set -g history-limit 10000
+
+# -------------------------------------------------------------------
+# Style
+# -------------------------------------------------------------------
 # improve colors
-# set -g default-terminal 'screen-256color'
+set -g default-terminal 'screen-256color'
+
+# soften status bar color from harsh green to light gray
+set -g status-bg '#666666'
+set -g status-fg '#aaaaaa'
+
+# remove administrative debris (session name, hostname, time) in status bar
+set -g status-left ''
+set -g status-right ''
+
+# -------------------------------------------------------------------
+# Key bindings
+# -------------------------------------------------------------------
+# change bind key to ctrl-s
+unbind-key C-b
+set-option -g prefix C-s
 
 # act like vim
 setw -g mode-keys vi
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
+# split vertical
+bind-key | split-window -h -c "#{pane_current_path}"
+
+# split horizontal
+bind-key - split-window -c "#{pane_current_path}"
+
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 forward_navigation="ps -o state= -o comm= -t '#{pane_tty}' \
-                      | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?|fzf)(diff)?$'"
+                    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?|fzf)(diff)?$'"
 bind-key -n C-h if-shell "$forward_navigation" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$forward_navigation" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$forward_navigation" "send-keys C-k"  "select-pane -U"
@@ -21,33 +58,13 @@ bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi C-\ select-pane -l
 
-set -g prefix2 C-s
-
-# start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
-set-window-option -g pane-base-index 1
-
-# renumber windows sequentially after closing any of them
-set -g renumber-windows on
-
-# soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
-
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right ''
-
-# increase scrollback lines
-set -g history-limit 10000
-
-# prefix -> back-one-character
-bind-key C-b send-prefix
 # prefix-2 -> forward-incremental-history-search
 bind-key C-s send-prefix -2
 
 # don't suspend-client
 unbind-key C-z
 
-# Local config
+# -------------------------------------------------------------------
+# Local configuration
+# -------------------------------------------------------------------
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
