--- a/tmux.conf
+++ b/tmux.conf
@@ -57,6 +57,7 @@ bind-key -T copy-mode-vi C-j select-pane -D
 bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi C-\ select-pane -l
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i"
 
 # prefix-2 -> forward-incremental-history-search
 bind-key C-s send-prefix -2
