--- a/tmux.conf
+++ b/tmux.conf
@@ -58,6 +58,7 @@ bind-key -T copy-mode-vi C-k select-pane -U
 bind-key -T copy-mode-vi C-l select-pane -R
 bind-key -T copy-mode-vi C-\ select-pane -l
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i"
+bind-key -n C-f set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
 
 # prefix-2 -> forward-incremental-history-search
 bind-key C-s send-prefix -2
