fix color scheme

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,7 +15,9 @@ set -g history-limit 10000
 # Style
 # -------------------------------------------------------------------
 # improve colors
-set -g default-terminal 'screen-256color'
+# set -g default-terminal 'screen-256color'
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 
 # soften status bar color from harsh green to light gray
 set -g status-bg '#666666'
