add tmux plugins

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,8 @@
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+
 # -------------------------------------------------------------------
 # Session options
 # -------------------------------------------------------------------
@@ -8,17 +13,9 @@ set-window-option -g pane-base-index 1
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
-# increase scrollback lines
-set -g history-limit 10000
-
 # -------------------------------------------------------------------
 # Style
 # -------------------------------------------------------------------
-# improve colors
-# set -g default-terminal 'screen-256color'
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*256col*:Tc"
-
 # soften status bar color from harsh green to light gray
 set -g status-bg '#666666'
 set -g status-fg '#aaaaaa'
@@ -36,30 +33,8 @@ set-option -g prefix C-s
 
 # act like vim
 setw -g mode-keys vi
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
 
-# split vertical
-bind-key | split-window -h -c "#{pane_current_path}"
-
-# split horizontal
-bind-key - split-window -c "#{pane_current_path}"
-
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-forward_navigation="ps -o state= -o comm= -t '#{pane_tty}' \
-                    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?|fzf)(diff)?$'"
-bind-key -n C-h if-shell "$forward_navigation" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$forward_navigation" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$forward_navigation" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$forward_navigation" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$forward_navigation" "send-keys C-\\" "select-pane -l"
-bind-key -T copy-mode-vi C-h select-pane -L
-bind-key -T copy-mode-vi C-j select-pane -D
-bind-key -T copy-mode-vi C-k select-pane -U
-bind-key -T copy-mode-vi C-l select-pane -R
-bind-key -T copy-mode-vi C-\ select-pane -l
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i"
+#bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i"
 bind-key -n C-f set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
 
 # prefix-2 -> forward-incremental-history-search
@@ -69,6 +44,36 @@ bind-key C-s send-prefix -2
 unbind-key C-z
 
 # -------------------------------------------------------------------
+# Mouse configuration
+# -------------------------------------------------------------------
+# Make mouse useful, tmux > 2.1 include select, resize pane/window and console wheel scroll
+set -g mouse on
+
+## Clipboard integration
+# ctrl+c to send to clipboard
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+# ctrl+v to paste from clipboard
+bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+# Selection with mouse should copy to clipboard right away, in addition to the default action.
+unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
+bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+
+
+# Middle click to paste from the clipboard
+unbind-key MouseDown2Pane
+bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+# Drag to re-order windows
+bind-key -n MouseDrag1Status swap-window -t=
+
+# Double click on the window list to open a new window
+bind-key -n DoubleClick1Status new-window
+
+# -------------------------------------------------------------------
 # Local configuration
 # -------------------------------------------------------------------
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+
+# Load tpm
+run -b '~/.tmux/plugins/tpm/tpm'
