feat: tmux edit, refresh and yank bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,16 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'catppuccin/tmux'
+
+# -------------------------------------------------------------------
+# General options
+# -------------------------------------------------------------------
+# edit configuration in new window
+bind e new-window -n tmux_conf bash -lc 'nvim ~/.tmux.conf && tmux source ~/.tmux.conf \; display ~/.tmux.conf sourced'
+
+# reload configuration
+bind r run -C 'tmux source ~/.tmux.conf' \; display-message "~/.tmux.conf sourced"
 
 # -------------------------------------------------------------------
 # Session options
@@ -16,13 +26,7 @@ set -g renumber-windows on
 # -------------------------------------------------------------------
 # Style
 # -------------------------------------------------------------------
-# soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
-
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right ''
+set -g status-position top
 
 # -------------------------------------------------------------------
 # Key bindings
@@ -42,6 +46,9 @@ bind-key C-s send-prefix -2
 
 # don't suspend-client
 unbind-key C-z
+
+# yank pane content to nvim
+bind C-u capture-pane -S - \; new-window -n nvim_capture bash -lc 'tmux show-buffer | nvim -'
 
 # -------------------------------------------------------------------
 # Mouse configuration
