enh: remove colision of ctrl-f with vim/tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,7 @@ set-option -g prefix C-s
 setw -g mode-keys vi
 
 #bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i"
-bind-key -n C-f set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+bind-key C-f set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
 
 # prefix-2 -> forward-incremental-history-search
 bind-key C-s send-prefix -2
