feat: tmux + sesh

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,6 +23,9 @@ set-window-option -g pane-base-index 1
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
+bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
+set -g detach-on-destroy off  # don't exit from tmux when closing a session
+
 # -------------------------------------------------------------------
 # Style
 # -------------------------------------------------------------------
@@ -76,6 +79,29 @@ bind-key -n MouseDrag1Status swap-window -t=
 
 # Double click on the window list to open a new window
 bind-key -n DoubleClick1Status new-window
+
+# -------------------------------------------------------------------
+# Sesh configuration
+# -------------------------------------------------------------------
+set-environment -g PATH "$PATH:$HOME/go/bin"
+
+bind-key "C-l" run-shell "sesh last"
+
+bind-key "T" run-shell "sesh connect \"$(
+  sesh list --icons | fzf-tmux -p 80%,70% \
+    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+    --preview-window 'right:55%' \
+    --preview 'sesh preview {}'
+)\""
+
 
 # -------------------------------------------------------------------
 # Local configuration
