fix: sesh last shortcut

--- a/tmux.conf
+++ b/tmux.conf
@@ -85,9 +85,9 @@ bind-key -n DoubleClick1Status new-window
 # -------------------------------------------------------------------
 set-environment -g PATH "$PATH:$HOME/go/bin"
 
-bind-key "C-l" run-shell "sesh last"
+bind-key "C-o" run-shell "sesh last"
 
-bind-key "T" run-shell "sesh connect \"$(
+bind-key "C-t" run-shell "sesh connect \"$(
   sesh list --icons | fzf-tmux -p 80%,70% \
     --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
