enh: utility to jump through tmux sessions

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,16 +39,16 @@ set-option -g prefix C-s
 setw -g mode-keys vi
 
 #bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i"
-bind-key C-f set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
-
-# prefix-2 -> forward-incremental-history-search
-bind-key C-s send-prefix -2
+bind-key C-F set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
 
 # don't suspend-client
 unbind-key C-z
 
 # yank pane content to nvim
 bind C-u capture-pane -S - \; new-window -n nvim_capture bash -lc 'tmux show-buffer | nvim -'
+
+# find other sessions and switch fast
+bind C-f display-popup -E -h 50% -w 50% bash -c "tmux ls -f '#{?session_attached,0,1}' | cut -d: -f 1 | fzf --reverse | xargs -r -I {} tmux switch-client -t '{}'"
 
 # -------------------------------------------------------------------
 # Mouse configuration
@@ -84,7 +84,7 @@ set-environment -g PATH "$PATH:$HOME/go/bin"
 
 bind-key "C-o" run-shell "sesh last"
 
-bind-key "C-t" run-shell "sesh connect \"$(
+bind-key "C-s" run-shell "sesh connect \"$(
   sesh list --icons | fzf-tmux -p 80%,70% \
     --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
