feat: interactive new session create

--- a/tmux.conf
+++ b/tmux.conf
@@ -50,6 +50,9 @@ bind C-u capture-pane -S - \; new-window -n nvim_capture bash -lc 'tmux show-buf
 # find other sessions and switch fast
 bind C-f display-popup -E -h 50% -w 50% bash -c "tmux ls -f '#{?session_attached,0,1}' | cut -d: -f 1 | fzf --reverse | xargs -r -I {} tmux switch-client -t '{}'"
 
+# start new session with given name
+bind C-t display-popup -E -h 50% -w 50% bash -c 'read -p "Session name: " && tmux new-session -P -d -s "$REPLY" && tmux switch-client -t "$REPLY"'
+
 # -------------------------------------------------------------------
 # Mouse configuration
 # -------------------------------------------------------------------
