feat: integrate with gpaste

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,6 +53,9 @@ bind C-f display-popup -E -h 50% -w 50% bash -c "tmux ls -f '#{?session_attached
 # start new session with given name
 bind C-t display-popup -E -h 50% -w 50% bash -c 'read -p "Session name: " && tmux new-session -P -d -s "$REPLY" && tmux switch-client -t "$REPLY"'
 
+# copy from clipboard history
+bind C-i display-popup -E -h 80% -w 80% bash -c 'tmux set-buffer "$(gpaste-client history --oneline | fzf --reverse | cut -d ':' -f 1 | xargs -r gpaste-client get)"; tmux paste-buffer'
+
 # -------------------------------------------------------------------
 # Mouse configuration
 # -------------------------------------------------------------------
