--- a/tmux.conf
+++ b/tmux.conf
@@ -83,6 +83,9 @@ bind-key -n MouseDrag1Status swap-window -t=
 # Double click on the window list to open a new window
 bind-key -n DoubleClick1Status new-window
 
+bind C-r display-popup -h 80% -w 80% -E "redmine_issues_selector | cut -f 1 | xargs tmux send-keys -l"
+bind C-b display-popup -h 80% -w 80% -E "git_branch_name_creator | xargs tmux send-keys -l"
+
 # -------------------------------------------------------------------
 # Sesh configuration
 # -------------------------------------------------------------------
