enh: start sesh with mini.pick by default

--- a/config/sesh.toml
+++ b/config/sesh.toml
@@ -1,6 +1,5 @@
 [default_session]
-# startup_command = "nvim -c ':Telescope find_files'"
-startup_command = 'nvim'
+startup_command = "nvim -c ':Pick files'"
 
 [[session]]
 name = "pgcli"
