feat: binding for gitlab_mrs_selector

--- a/tmux.conf
+++ b/tmux.conf
@@ -84,7 +84,8 @@ bind-key -n MouseDrag1Status swap-window -t=
 bind-key -n DoubleClick1Status new-window
 
 bind C-r display-popup -h 80% -w 80% -E "redmine_issues_selector | cut -f 1 | xargs tmux send-keys -l"
-bind C-b display-popup -h 80% -w 80% -E "git_branch_name_creator | xargs tmux send-keys -l"
+bind C-b display-popup -h 80% -w 80% -E "git_branch_name_creator | xargs -r tmux send-keys -l"
+bind C-g display-popup -h 80% -w 80% -E "gitlab_mrs_selector | xargs -r tmux send-keys -l"
 
 # -------------------------------------------------------------------
 # Sesh configuration
